# hera

./: .gitignore  LICENSE  README.md  TODOs.md  pyproject.toml  setup.cfg  walkthrough.md
hera/: __init__.py  backend.py
hera/nn/: __init__.py  training.py  training_utils.py
hera/nn/losses/: __init__.py  base_loss.py  losses.py
hera/nn/modules/: __init__.py  activations.py  flatten.py  functional.py  linear.py  list_container_base.py  losses.py  module.py  module_list.py  parameter.py  permute.py  sequential.py
hera/nn/modules/attention/: __init__.py  multi_head_attention.py
hera/nn/modules/convolution/: __init__.py  conv_validation.py  convolution_1d.py  convolution_2d.py  convolution_2d_tests.py
hera/nn/modules/dropout/: dropout.py
hera/nn/modules/embedding/: __init__.py  embedding.py  learnable_positional_embedding.py
hera/nn/modules/normalization/: __init__.py  layer_normalization.py
hera/nn/modules/pooling/: __init__.py  average_pooling_2d.py  average_pooling_2d_tests.py  global_pooling.py  global_pooling_1d.py  global_pooling_2d.py  pooling_validation.py
hera/nn/modules/regularization/: dropout.py
hera/nn/modules/transformers/: __init__.py  transformer_encoder_layer.py
hera/nn/optimizers/: __init__.py  adam.py  base_optimizer.py
